--- a/src/EDA_DATA_ANALYSIS_I.ipynb
+++ b/src/EDA_DATA_ANALYSIS_I.ipynb
@@ -242,6 +242,7 @@
     }
    ],
    "source": [
+    "# Lectura de archivo csv\n",
     "df = pd.read_csv(r'E:\\JESSE\\PLATZI\\PYTHON_MV1\\src\\df_solar_01.csv')\n",
     "pd.options.display.float_format='{:,.2f}'.format\n",
     "df.head()"
