--- a/src/EDA_DATA_ANALYSIS_I.ipynb
+++ b/src/EDA_DATA_ANALYSIS_I.ipynb
@@ -1113,6 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Comentario\n",
     "def Hour_description(df,Columns,variables_str):\n",
     "    df_new= pd.DataFrame()\n",
     "    df_new_Columns=[]\n",
